--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,48 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@book{little2019statistical,
+  title={Statistical analysis with missing data},
+  author={Little, Roderick JA and Rubin, Donald B},
+  volume={793},
+  year={2019},
+  publisher={John Wiley \& Sons}
 }
-
+@book{rubin1987,
+  author = {Rubin, Donald B},
+  pages = 258,
+  publisher={John Wiley \& Sons},
+  title = {Multiple Imputation for Nonresponse in Surveys},
+  year = 1987
+}
+@book{rubin2004multiple,
+  title={Multiple imputation for nonresponse in surveys},
+  author={Rubin, Donald B},
+  volume={81},
+  year={2004},
+  publisher={John Wiley \& Sons}
+}
+@article{rubin1976inference,
+  title={Inference and missing data},
+  author={Rubin, Donald B},
+  journal={Biometrika},
+  volume={63},
+  number={3},
+  pages={581--592},
+  year={1976},
+  publisher={Oxford University Press}
+}
+@Inbook{Imbens2010,
+author="Imbens, Guido W.
+and Rubin, Donald B.",
+editor="Durlauf, Steven N.
+and Blume, Lawrence E.",
+title="Rubin Causal Model",
+bookTitle="Microeconometrics",
+year="2010",
+publisher="Palgrave Macmillan UK",
+address="London",
+pages="229--241",
+abstract="The Rubin Causal Model (RCM) is a formal mathematical framework for causal inference, first given that name by Holland (1986) for a series of previous articles developing the perspective (Rubin, 1974; 1975; 1976; 1977; 1978; 1979; 1980). There are two essential parts to the RCM, and a third optional one. The first part is the use of `potential outcomes' to define causal effects in all situations --- this part defines `the science', which is the object of inference, and it requires the explicit consideration of the manipulations that define the treatments whose causal effects we wish to estimate. The second part is an explicit probabilistic model for the assignment of `treatments' to `units' as a function of all quantities that could be observed, including all potential outcomes; this model is called the `assignment mechanism', and defines the structure of experiments designed to learn about the science from observed data or the acts of nature that lead to the observed data. The third possible part of the RCM framework is an optional distribution on the quantities being conditioned on in the assignment mechanism, including the potential outcomes, thereby allowing model-based Bayesian `posterior predictive' (causal) inference. This part of the RCM focuses on the model-based analysis of observed data to draw inferences for causal effects, where the observed data are revealed by applying the assignment mechanism to the science. A full-length text that discusses estimation and inference for causal effects from this perspective is Imbens and Rubin (2006).",
+isbn="978-0-230-28081-6",
+doi="10.1057/9780230280816_28",
+url="https://doi.org/10.1057/9780230280816_28"
+}
 
